# pyWorldX

./: .coverage  .coveragerc  .gitignore  CLAUDE.md  README.md  ask_notebook.py  implementation_plan.md  latest.md  open_decisions.md  patch_cli.py  phase2_fixes_tasks_draft.md  phase2_review_report.md  phase_2-5_plan.md  pyWorldX_spec_0.2.9.0.md  pyproject.toml  real_data_pyWorldX.md  real_data_pyWorldX_plan.md  run_world3.py  synthesis_and_plan.md  tests.out  uncertainties.md  validation_report_nebel2023.md
.claude/: settings.json
.gemini_security/: DRAFT_SECURITY_REPORT.md  SECURITY_ANALYSIS_TODO.md
.github/workflows/: ci.yml
.metaswarm/: KNOWLEDGE_BASE.md  README.md  project-profile.json
.metaswarm/scripts/: test-with-coverage.sh  validate.sh
.qwen/: PROJECT_SUMMARY.md
Notebook Conversations/: 01_analysis_overview.md  02_synthesized_system_dynamics_upgrades.md  03_synthesized_empirical_limits_and_validation.md  04_synthesized_advanced_integrations.md  05_synthesized_thermodynamic_demographics_and_feedbacks.md  06_synthesized_v2_scenario_testing.md  07_synthesized_v2_core_engine_specifications.md  08_synthesized_phase2_questions_and_answers.md  09_synthesized_phase2_calibration_and_implementation_refinements.md  README.md
Notebook Conversations/Raw_Q_and_A/: q01_python_modernization.md  q02_api_structure_and_integration.md  q03_structural_hacks_to_replace.md  q04_fcaor_eroei_redesign.md  q05_macro_finance_integration.md  q06_gini_bifurcated_demographics.md  q07_technocratic_policy_change.md  (+85 more)
data_pipeline/: .env.example  .gitignore  CHECKLIST.md  README.md  __init__.py  __main__.py  cli.py  config.py  pipeline.py  schema.py
output/: calibration_baseline.json  calibration_final.json  frozen_for_agriculture.json  frozen_for_pollution.json  frozen_for_resources.json  frozen_non_capital.json  nebel_2024_trajectories.csv  w3_03_trajectories.csv
plans/: 2026-04-17-phase2-final-patches.md  2026-04-18-preflight-plan.md  5_stock_carbon_model_plan.md  Full-System Calibration Plan for pyWorldX (Phase 2 Remediation).md  README.md  databridge_integration_plan.md  global_optimizer_upgrade_plan.md  implementation_audit_report.md  phase_0.5_plan.md  phase_0_plan.md  phase_1_plan.md  phase_2.1_plan.md  phase_2_plan.md  phase_2_plan_holes.md  preflight_audit.md  pyworldx_advanced_paradigms.md  sobol_decomposition_plan.md  uncertainties.md
pyworldx/: __init__.py  engine.py  presets.py
scripts/: run_full_optimization.py  run_joint_calibration.py
tests/: _phase2_helpers.py  conftest.py
(+336 files in other folders)
