[tool.poetry]
name = "pyworldx"
version = "0.2.9.0"
description = "Modular, unit-safe, auditable forecasting platform for long-horizon global systems modeling"
authors = ["pyWorldX Team"]
readme = "README.md"
packages = [{include = "pyworldx"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
pandas = "^2.1"
pydantic = "^2.12.5"

# Pipeline extras (optional — only needed for data_pipeline)
typer = {version = "^0.24.1", optional = true}
pyarrow = {version = "^23.0.1", optional = true}
openpyxl = {version = "^3.1.5", optional = true}
requests = {version = "^2.33.1", optional = true}
duckdb = {version = "^1.5.1", optional = true}
python-dotenv = {version = "^1.2.2", optional = true}

[tool.poetry.extras]
pipeline = ["typer", "pyarrow", "openpyxl", "requests", "duckdb", "python-dotenv"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
mypy = "^1.8"
ruff = "^0.3"
pandas-stubs = "^3.0.0.260204"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests", "data_pipeline/tests"]
addopts = "-v --tb=short"
markers = ["network: marks tests that require network access (deselect with '-m \"not network\"')"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"data_pipeline/*" = ["ANN401"]
